typescript/checker/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithIdenticalPrimitiveType.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            24,
        ),
        hi: BytePos(
            25,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithIdenticalPrimitiveType.ts:3:5
  |
3 | var a: number;
  |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            39,
        ),
        hi: BytePos(
            40,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithIdenticalPrimitiveType.ts:4:5
  |
4 | var b: boolean;
  |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            55,
        ),
        hi: BytePos(
            56,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithIdenticalPrimitiveType.ts:5:5
  |
5 | var c: string;
  |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            70,
        ),
        hi: BytePos(
            71,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithIdenticalPrimitiveType.ts:6:5
  |
6 | var d: void;
  |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            83,
        ),
        hi: BytePos(
            84,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithIdenticalPrimitiveType.ts:7:5
  |
7 | var e: E;
  |     ^

